--- a/q1/style.css
+++ b/q1/style.css
@@ -18,17 +18,25 @@ main{
 }
 .flightCard{
     display: flex;
-    justify-content: space-evenly;
-    align-items: space-evenly;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     border: 2px solid black;
-    border-radius: 5%;
+    border-radius: 2.5%;
     box-shadow: 0 2px 5px black;
-    margin: 2px;
+    background-color: white;
+    padding: 5px;
 
 }
 .flightDes{
+
 }
 .desImg{
     width: 95%;
+    border: 2px solid black;
+    border-radius: 2.5%;
+    box-shadow: 0 2px 5px black;
+}
+.gateNum{
+    color: red;
 }
